make api-test sucessful 2

--- a/reports/junit.xml
+++ b/reports/junit.xml
@@ -1,181 +1,1 @@
-<?xml version="1.0" encoding="utf-8"?><testsuites><testsuite name="pytest" errors="0" failures="4" skipped="0" tests="4" time="6.341" timestamp="2025-03-06T12:45:57.406422" hostname="Matias"><testcase classname="tests.api.test_api.TestBatchPipeline" name="test_should_failed_unkown_column_1" time="0.006"><failure message="AttributeError: module 'anyio' has no attribute 'start_blocking_portal'">self = &lt;tests.api.test_api.TestBatchPipeline testMethod=test_should_failed_unkown_column_1&gt;
-
-    def test_should_failed_unkown_column_1(self):
-        data = {
-            "flights": [
-                {
-                    "OPERA": "Aerolineas Argentinas",
-                    "TIPOVUELO": "N",
-                    "MES": 13
-                }
-            ]
-        }
-        # when("xgboost.XGBClassifier").predict(ANY).thenReturn(np.array([0]))# change this line to the model of chosing
-&gt;       response = self.client.post("/predict", json=data)
-
-tests\api\test_api.py:38: 
-_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _
-.venv\lib\site-packages\requests\sessions.py:637: in post
-    return self.request("POST", url, data=data, json=json, **kwargs)
-.venv\lib\site-packages\starlette\testclient.py:473: in request
-    return super().request(
-.venv\lib\site-packages\requests\sessions.py:589: in request
-    resp = self.send(prep, **send_kwargs)
-.venv\lib\site-packages\requests\sessions.py:703: in send
-    r = adapter.send(request, **kwargs)
-.venv\lib\site-packages\starlette\testclient.py:267: in send
-    raise exc
-.venv\lib\site-packages\starlette\testclient.py:262: in send
-    with self.portal_factory() as portal:
-C:\Program Files\Python310\lib\contextlib.py:135: in __enter__
-    return next(self.gen)
-_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _
-
-self = &lt;starlette.testclient.TestClient object at 0x000002773B474DC0&gt;
-
-    @contextlib.contextmanager
-    def _portal_factory(
-        self,
-    ) -&gt; typing.Generator[anyio.abc.BlockingPortal, None, None]:
-        if self.portal is not None:
-            yield self.portal
-        else:
-&gt;           with anyio.start_blocking_portal(**self.async_backend) as portal:
-E           AttributeError: module 'anyio' has no attribute 'start_blocking_portal'
-
-.venv\lib\site-packages\starlette\testclient.py:450: AttributeError</failure></testcase><testcase classname="tests.api.test_api.TestBatchPipeline" name="test_should_failed_unkown_column_2" time="0.002"><failure message="AttributeError: module 'anyio' has no attribute 'start_blocking_portal'">self = &lt;tests.api.test_api.TestBatchPipeline testMethod=test_should_failed_unkown_column_2&gt;
-
-    def test_should_failed_unkown_column_2(self):
-        data = {
-            "flights": [
-                {
-                    "OPERA": "Aerolineas Argentinas",
-                    "TIPOVUELO": "O",
-                    "MES": 13
-                }
-            ]
-        }
-        # when("xgboost.XGBClassifier").predict(ANY).thenReturn(np.array([0]))# change this line to the model of chosing
-&gt;       response = self.client.post("/predict", json=data)
-
-tests\api\test_api.py:52: 
-_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _
-.venv\lib\site-packages\requests\sessions.py:637: in post
-    return self.request("POST", url, data=data, json=json, **kwargs)
-.venv\lib\site-packages\starlette\testclient.py:473: in request
-    return super().request(
-.venv\lib\site-packages\requests\sessions.py:589: in request
-    resp = self.send(prep, **send_kwargs)
-.venv\lib\site-packages\requests\sessions.py:703: in send
-    r = adapter.send(request, **kwargs)
-.venv\lib\site-packages\starlette\testclient.py:267: in send
-    raise exc
-.venv\lib\site-packages\starlette\testclient.py:262: in send
-    with self.portal_factory() as portal:
-C:\Program Files\Python310\lib\contextlib.py:135: in __enter__
-    return next(self.gen)
-_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _
-
-self = &lt;starlette.testclient.TestClient object at 0x000002773B55D6F0&gt;
-
-    @contextlib.contextmanager
-    def _portal_factory(
-        self,
-    ) -&gt; typing.Generator[anyio.abc.BlockingPortal, None, None]:
-        if self.portal is not None:
-            yield self.portal
-        else:
-&gt;           with anyio.start_blocking_portal(**self.async_backend) as portal:
-E           AttributeError: module 'anyio' has no attribute 'start_blocking_portal'
-
-.venv\lib\site-packages\starlette\testclient.py:450: AttributeError</failure></testcase><testcase classname="tests.api.test_api.TestBatchPipeline" name="test_should_failed_unkown_column_3" time="0.002"><failure message="AttributeError: module 'anyio' has no attribute 'start_blocking_portal'">self = &lt;tests.api.test_api.TestBatchPipeline testMethod=test_should_failed_unkown_column_3&gt;
-
-    def test_should_failed_unkown_column_3(self):
-        data = {
-            "flights": [
-                {
-                    "OPERA": "Argentinas",
-                    "TIPOVUELO": "O",
-                    "MES": 13
-                }
-            ]
-        }
-        # when("xgboost.XGBClassifier").predict(ANY).thenReturn(np.array([0]))
-&gt;       response = self.client.post("/predict", json=data)
-
-tests\api\test_api.py:66: 
-_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _
-.venv\lib\site-packages\requests\sessions.py:637: in post
-    return self.request("POST", url, data=data, json=json, **kwargs)
-.venv\lib\site-packages\starlette\testclient.py:473: in request
-    return super().request(
-.venv\lib\site-packages\requests\sessions.py:589: in request
-    resp = self.send(prep, **send_kwargs)
-.venv\lib\site-packages\requests\sessions.py:703: in send
-    r = adapter.send(request, **kwargs)
-.venv\lib\site-packages\starlette\testclient.py:267: in send
-    raise exc
-.venv\lib\site-packages\starlette\testclient.py:262: in send
-    with self.portal_factory() as portal:
-C:\Program Files\Python310\lib\contextlib.py:135: in __enter__
-    return next(self.gen)
-_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _
-
-self = &lt;starlette.testclient.TestClient object at 0x000002773B583A00&gt;
-
-    @contextlib.contextmanager
-    def _portal_factory(
-        self,
-    ) -&gt; typing.Generator[anyio.abc.BlockingPortal, None, None]:
-        if self.portal is not None:
-            yield self.portal
-        else:
-&gt;           with anyio.start_blocking_portal(**self.async_backend) as portal:
-E           AttributeError: module 'anyio' has no attribute 'start_blocking_portal'
-
-.venv\lib\site-packages\starlette\testclient.py:450: AttributeError</failure></testcase><testcase classname="tests.api.test_api.TestBatchPipeline" name="test_should_get_predict" time="0.002"><failure message="AttributeError: module 'anyio' has no attribute 'start_blocking_portal'">self = &lt;tests.api.test_api.TestBatchPipeline testMethod=test_should_get_predict&gt;
-
-    def test_should_get_predict(self):
-        data = {
-            "flights": [
-                {
-                    "OPERA": "Aerolineas Argentinas",
-                    "TIPOVUELO": "N",
-                    "MES": 3
-                }
-            ]
-        }
-        # when("xgboost.XGBClassifier").predict(ANY).thenReturn(np.array([0])) # change this line to the model of chosing
-&gt;       response = self.client.post("/predict", json=data)
-
-tests\api\test_api.py:22: 
-_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _
-.venv\lib\site-packages\requests\sessions.py:637: in post
-    return self.request("POST", url, data=data, json=json, **kwargs)
-.venv\lib\site-packages\starlette\testclient.py:473: in request
-    return super().request(
-.venv\lib\site-packages\requests\sessions.py:589: in request
-    resp = self.send(prep, **send_kwargs)
-.venv\lib\site-packages\requests\sessions.py:703: in send
-    r = adapter.send(request, **kwargs)
-.venv\lib\site-packages\starlette\testclient.py:267: in send
-    raise exc
-.venv\lib\site-packages\starlette\testclient.py:262: in send
-    with self.portal_factory() as portal:
-C:\Program Files\Python310\lib\contextlib.py:135: in __enter__
-    return next(self.gen)
-_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _
-
-self = &lt;starlette.testclient.TestClient object at 0x000002773B59FC10&gt;
-
-    @contextlib.contextmanager
-    def _portal_factory(
-        self,
-    ) -&gt; typing.Generator[anyio.abc.BlockingPortal, None, None]:
-        if self.portal is not None:
-            yield self.portal
-        else:
-&gt;           with anyio.start_blocking_portal(**self.async_backend) as portal:
-E           AttributeError: module 'anyio' has no attribute 'start_blocking_portal'
-
-.venv\lib\site-packages\starlette\testclient.py:450: AttributeError</failure></testcase></testsuite></testsuites>
+<?xml version="1.0" encoding="utf-8"?><testsuites><testsuite name="pytest" errors="0" failures="0" skipped="0" tests="4" time="23.546" timestamp="2025-03-06T13:59:51.131316" hostname="Matias"><testcase classname="tests.api.test_api.TestBatchPipeline" name="test_should_failed_unkown_column_1" time="0.026" /><testcase classname="tests.api.test_api.TestBatchPipeline" name="test_should_failed_unkown_column_2" time="0.006" /><testcase classname="tests.api.test_api.TestBatchPipeline" name="test_should_failed_unkown_column_3" time="0.006" /><testcase classname="tests.api.test_api.TestBatchPipeline" name="test_should_get_predict" time="0.022" /></testsuite></testsuites>
